fixed issue where vertical scrollbar was displaying on 'first run' page

--- a/src/builds/builds.scss
+++ b/src/builds/builds.scss
@@ -47,6 +47,8 @@
     border: 1px solid #eee;
     background-color: #f5f5f5;
     color: #777;
+    margin-bottom: 0;
+
     ul {
       padding-left: 0;
       margin-bottom: 0;
